--- a/add.html
+++ b/add.html
@@ -20,7 +20,7 @@
     <h3>SIZE OF MATRIX B</h3>
     <p class="form-group">
       <textarea placeholder="Enter number of rows..."></textarea><br />
-      <textarea onblur="fun()" placeholder="Enter number of columns..."></textarea>
+      <textarea onblur="fun("A")" placeholder="Enter number of columns..."></textarea>
     </p>
   </div>
   
